--- a/src/Animations/Animations.Android/Animations.Android.csproj
+++ b/src/Animations/Animations.Android/Animations.Android.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>XamarinCommunityToolkit.Animations.Droid</RootNamespace>
-    <AssemblyName>FormsCommunityToolkit.Animations.Android</AssemblyName>
+    <AssemblyName>XamarinCommunityToolkit.Animations.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -38,7 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\FormsCommunityToolkit.Animations.Android.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\XamarinCommunityToolkit.Animations.Android.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FormsViewGroup, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -102,7 +102,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Animations\Animations.csproj">
       <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
-      <Name>FormsCommunityToolkit.Animations</Name>
+      <Name>XamarinCommunityToolkit.Animations</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
