--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -21,4 +21,17 @@
 	<PackageLicenseUrl>https://github.com/xamarin/XamarinCommunityToolkit/blob/dev/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/xamarin/XamarinCommunityToolkit</PackageProjectUrl>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <!-- Common ruleset shared by all projects -->
+    <CodeAnalysisRuleset>$(MSBuildThisFileDirectory)Toolkit.ruleset</CodeAnalysisRuleset>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Add reference to StyleCop analyzers to all projects  -->
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+
+    <!-- Common StyleCop configuration -->
+    <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json" />
+  </ItemGroup>
 </Project>
