--- a/Samples/Samples.Android/Properties/AndroidManifest.xml
+++ b/Samples/Samples.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Samples">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Samples.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Samples" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="26" />
+	<application android:label="Samples.Android" android:icon="@drawable/icon"></application>
 </manifest>
