--- a/Toolkit/Platform/Android/Controls/Controls.csproj
+++ b/Toolkit/Platform/Android/Controls/Controls.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Microsoft.Toolkit.Parsers" Version="2.2.0" />
     <PackageReference Include="Xamarin.Android.Support.Emoji.Bundled" Version="27.0.2" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
+  </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\CodeStyles.targets" />
