--- a/Toolkit/Platform/Android/Helpers/Helpers.csproj
+++ b/Toolkit/Platform/Android/Helpers/Helpers.csproj
@@ -9,4 +9,7 @@
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\CodeStyles.targets" />
+  <ItemGroup>
+    <PackageReference Include="AndroidSVG.Xamarin" Version="1.2.1.1" />
+  </ItemGroup>
 </Project>
