Update to XF 3.0

--- a/Toolkit/Effects/Effects.csproj
+++ b/Toolkit/Effects/Effects.csproj
@@ -45,4 +45,7 @@
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
   <Import Project="$(MSBuildThisFileDirectory)..\mdoc.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\CodeStyles.targets" />
+  <ItemGroup>
+    <PackageReference Update="Xamarin.Forms" Version="3.0.0.446417" />
+  </ItemGroup>
 </Project>
