--- a/Toolkit/Directory.build.targets
+++ b/Toolkit/Directory.build.targets
@@ -1,7 +1,7 @@
 <Project>  
   <ItemGroup>
-    <PackageReference Include="mdoc" Version="5.6.0" PrivateAssets="All" />
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.0" PrivateAssets="All" />
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="mdoc" Version="5.7.1" PrivateAssets="All" />
+    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.6.20-preview" PrivateAssets="All" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
   </ItemGroup>
 </Project>
