--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -61,6 +61,7 @@
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <Folder Include="Converters\" />
+    <Folder Include="Behaviors\" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
   </ItemGroup>
@@ -97,5 +98,5 @@
     <PackageReference Include="Tizen.NET" Version="4.0.0" />
     <Compile Include="**\*.tizen.cs" />
     <Compile Include="**\*.tizen.*.cs" />
-  </ItemGroup>  
+  </ItemGroup>
 </Project>
