--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -55,6 +55,9 @@
         <Compile Include="**/*.shared.cs" />
         <Compile Include="**/*.shared.*.cs" />
         <Compile Include="**/*.cs" />
+        <Compile Remove="obj\**" />
+        <EmbeddedResource Remove="obj\**" />
+        <None Remove="obj\**" />
         <None Include="..\LICENSE" PackagePath="" Pack="true" />
         <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
         <Folder Include="Converters\" />
