CI Build Fixes & New Behaviors
- Fixed CI build errors by removing multiple Include elements in project file, which caused the same file to be included multiple times during a build
- Fixed the automatic adding of obj folder to the solution by adding Exclude attribute to the single Compile element
- Added RegularExpressionValidationBehavior and MaxLengthValidationBehavior for Entry controls
- Added static RegularExpressions to contain most common regular expressions that can be used in any app, especially behaviors and validators

--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -52,16 +52,10 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="**/*.shared.cs" />
-    <Compile Include="**/*.shared.*.cs" />
-    <Compile Include="**/*.cs" />
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
+    <Compile Include="**/*.cs" Exclude="obj\**" />    
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <Folder Include="Converters\" />
-    <Folder Include="Behaviors\" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
   </ItemGroup>
