--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -51,10 +51,12 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="**/*.cs" Exclude="obj\**" />    
+    <Compile Include="**/*.shared.cs" />
+    <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <Folder Include="Converters\" />
+    <Folder Include="Behaviors\" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
   </ItemGroup>
@@ -91,5 +93,5 @@
         <PackageReference Include="Tizen.NET" Version="4.0.0" />
         <Compile Include="**\*.tizen.cs" />
         <Compile Include="**\*.tizen.*.cs" />
-    </ItemGroup>
+    </ItemGroup>    
 </Project>
