--- a/XamarinCommunityToolkitSample.iOS/XamarinCommunityToolkitSample.iOS.csproj
+++ b/XamarinCommunityToolkitSample.iOS/XamarinCommunityToolkitSample.iOS.csproj
@@ -132,13 +132,13 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.937-pre4" />
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\XamarinCommunityToolkitSample\XamarinCommunityToolkitSample.csproj">
-      <Project>{D91D56FD-A985-47BC-9885-3E8F3255E355}</Project>
+      <Project>{81AADE72-D666-4AB0-83D9-8FE366E0755E}</Project>
       <Name>XamarinCommunityToolkitSample</Name>
     </ProjectReference>
   </ItemGroup>
