--- a/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
+++ b/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
@@ -3,17 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.937-pre4" />  
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controls\" />
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,11 +16,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="resources\xamarin_monkey.png">
+      <LogicalName>xamarin_monkey.png</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Update="Views\BehaviorsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\ConvertersPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="resources\xamarin_monkey.png" />
   </ItemGroup>
 </Project>
