Implement IMarkupExtension in converters (#139)
* Converters as MarkupExtension

* Renamed TextCaseConverterType to TextCaseType.
Renamed ValueConverterMarkupExtension to ValueConverterExtension and put it in Extensions folder.

--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -60,8 +60,10 @@
     <Folder Include="Converters\" />
     <Folder Include="Helpers\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
   </ItemGroup>
