--- a/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/XamarinCommunityToolkit.csproj
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/2.0.54">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid80;MonoAndroid81;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40</TargetFrameworks>
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);uap10.0.16299</TargetFrameworks>
     <AssemblyName>XamarinCommunityToolkit</AssemblyName>
     <RootNamespace>XamarinCommunityToolkit</RootNamespace>
@@ -23,7 +22,13 @@
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
     <RepositoryUrl>https://github.com/xamarin/XamarinCommunityToolkit</RepositoryUrl>
     <PackageReleaseNotes>
+      
+      
+      
       <!-- See if we can host these on MS docs? -->
+    
+    
+    
     </PackageReleaseNotes>
     <DefineConstants>$(DefineConstants);</DefineConstants>
     <UseFullSemVerForNuGet>false</UseFullSemVerForNuGet>
@@ -36,7 +41,13 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
+    <!-- MonoAndroid80 & MonoAndroid81 are absent because latest Xamarin.Forms version doesn't support them -->
+    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40</TargetFrameworks>
     <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)'=='Release' ">
+    <!-- MonoAndroid80 & MonoAndroid81 are present for backward compatibility -->
+    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid80;MonoAndroid81;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Release' And '$(OS)' == 'Windows_NT' ">
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
@@ -47,14 +58,19 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+  <ItemGroup Condition=" '$(Configuration)'=='Debug' ">
+    <!-- Use latest Xamarin.Forms version for development -->
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
+  </ItemGroup>
   <ItemGroup Condition=" '$(Configuration)'=='Release' ">
+    <!-- Use Xamarin.Forms version 3.5 for distribution -->
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**/*.shared.cs" />
     <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
     <Folder Include="Behaviors\" />
     <Folder Include="Controls\" />
     <Folder Include="Converters\" />
@@ -95,7 +111,6 @@
         <Compile Include="**\*.watchos.*.cs" />
     </ItemGroup>
     <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
-        <PackageReference Include="Tizen.NET" Version="4.0.0" />
         <Compile Include="**\*.tizen.cs" />
         <Compile Include="**\*.tizen.*.cs" />
     </ItemGroup>    
