--- a/XamarinCommunityToolkitSample.Android/XamarinCommunityToolkitSample.Android.csproj
+++ b/XamarinCommunityToolkitSample.Android/XamarinCommunityToolkitSample.Android.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.937-pre4" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
