--- a/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
+++ b/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
@@ -28,6 +28,9 @@
   <ItemGroup>
     <Folder Include="resources\" />
     <Folder Include="Models\" />
+    <Folder Include="Pages\Views\" />
+    <Folder Include="ViewModels\Views\" />
+    <Folder Include="Models\Views\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="resources\xamarin_monkey.png" />
