--- a/XamarinCommunityToolkitSample.iOS/XamarinCommunityToolkitSample.iOS.csproj
+++ b/XamarinCommunityToolkitSample.iOS/XamarinCommunityToolkitSample.iOS.csproj
@@ -141,6 +141,10 @@
       <Project>{81AADE72-D666-4AB0-83D9-8FE366E0755E}</Project>
       <Name>XamarinCommunityToolkitSample</Name>
     </ProjectReference>
+    <ProjectReference Include="..\XamarinCommunityToolkit\XamarinCommunityToolkit.csproj">
+      <Project>{B0DCDF81-953D-47DA-A7D4-0565339BF07C}</Project>
+      <Name>XamarinCommunityToolkit</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\xamarinstore.jpg" />
