[POC] Validation behaviors (#132)
* Validation behaviors

* removed useless effect behavior

* refactored samples

* Update XamarinCommunityToolkit/Behaviors/EventToCommandBehavior.shared.cs

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* renamed method

* improved readability

* renamed command in the sample files

* fixed build warning

* Update XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* improved readability of bindable props

* Update XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* updated sample

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

--- a/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
+++ b/XamarinCommunityToolkitSample/XamarinCommunityToolkitSample.csproj
@@ -32,6 +32,9 @@
     <Folder Include="Pages\Views\" />
     <Folder Include="ViewModels\Views\" />
     <Folder Include="Models\Views\" />
+    <Folder Include="Pages\Behaviors\" />
+    <Folder Include="ViewModels\Behaviors\" />
+    <Folder Include="Models\Behaviors\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="resources\xamarin_monkey.png" />
