--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ resources:
 trigger:
   branches:
     include:
-    - master
+    - main
   tags:
     include:
     - '*'
@@ -33,14 +33,14 @@ pr:
   autoCancel: false
   branches:
     include:
-    - master
+    - main
 
 schedules:
 - cron: "0 0 * * *"
   displayName: Daily midnight build
   branches:
     include:
-    - master
+    - main
 
 jobs:
   - job: build_windows
@@ -71,7 +71,7 @@ jobs:
           msbuildArguments: '/t:Pack /p:PackageVersion=$(NugetPackageVersion) /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)/nuget"'
 #      - task: DotNetCoreCLI@2
 #        displayName: Publish to GitHub NuGet Packages
-#        condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/master'))
+#        condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/main'))
 #        inputs:
 #          command: 'custom'
 #          custom: 'nuget'
