--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,12 @@ jobs:
 #          command: 'custom'
 #          custom: 'nuget'
 #          arguments: 'push --source https://nuget.pkg.github.com/xamarin/index.json --api-key $(GitHub.NuGet.Token) "$(Build.ArtifactStagingDirectory)\nuget\*.nupkg"'
+      - task: DotNetCoreCLI@2
+        displayName: Run Tests
+        inputs:
+          command: test
+          projects: 'XamarinCommunityToolkit.UnitTests/XamarinCommunityToolkit.UnitTests.csproj'
+          arguments: '--configuration Release'
       # publish the packages
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Unsigned NuGets'
