--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   NETCORE_VERSION: '3.1.x'
   NETCORE_TEST_VERSION: '2.2.x'
   RunPoliCheck: 'false'
-  PathToCsproj: 'XamarinCommunityToolkit/XamarinCommunityToolkit.csproj'
+  PathToCsproj: 'XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj'
 
 resources:
   repositories:
